<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Gambar kosong!</string>
    <string name="analyze_history">Analyze History</string>
    <string name="skin_cancer_classification">Skin Cancer Classification</string>
    <string name="analysis_result">Analysis Result</string>
    <string name="back_button">Back Button</string>
    <string name="inference_time">Inference Time</string>
    <string name="save_to_history">Save to History</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="result_history_title">Result History</string>
    <string name="empty_list">Empty List</string>
    <string name="read_related_news">Read Related News</string>
    <string name="published_at">Published At</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="published_at_custom">Published at \n%s</string>
    <string name="related_news">Related News</string>
    <string name="result_text">RESULT_TEXT</string>
    <string name="inference_time_text">INFERENCE_TIME_TEXT</string>
    <string name="inference_time_custom">Inference time: %s</string>
</resources>