<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/resultToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnight_light"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/backTab"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:contentPadding="4dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/midnight_light">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/back_button" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="95dp"
            android:fontFamily="@font/poppins_bold_semi"
            android:text="@string/analysis_result"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/resultToolBar"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_place_holder"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_image"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/result"
        android:fontFamily="@font/poppins_bold_semi"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/inference_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result_text"
        android:layout_marginTop="-5dp"
        android:gravity="center"
        android:text="@string/inference_time"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_to_history"
        android:fontFamily="@font/poppins_bold_semi"
        android:backgroundTint="@color/midnight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inference_time_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>