<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/news_background"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:importantForAccessibility="no" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/ivNews"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/rounded_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPublishedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/published_at"
            android:textSize="11sp"
            android:textColor="@color/vanilla"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/ivNews"
            app:layout_constraintStart_toStartOf="@+id/ivNews"
            app:layout_constraintEnd_toEndOf="@+id/ivNews"/>

        <TextView
            android:id="@+id/tvNewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_bold_semi"
            android:text="@string/news_title"
            android:textSize="12sp"
            android:textColor="@color/vanilla"
            app:layout_constraintStart_toEndOf="@+id/ivNews"
            app:layout_constraintTop_toTopOf="@+id/ivNews" />

        <TextView
            android:id="@+id/tvNewsDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/news_description"
            android:textSize="11sp"
            android:textColor="@color/vanilla"
            app:layout_constraintTop_toBottomOf="@+id/tvNewsTitle"
            app:layout_constraintStart_toStartOf="@+id/tvNewsTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>